# mcptest

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.claude/skills/mcptest/: SKILL.md
docs/: getting-started.md  index.md  mcp-server.md
docs/blog/: awesome-claude-code-submission.md  ci-gate-example.md  claude-code-mcp-agent-testing.md  demo-script.md  devto-ready.md  how-i-test-my-mcp-agent.md  social-hooks.md
docs/guides/: assertions.md  ci-integration.md  configuration.md  conformance.md  plugins.md  writing-tests.md
examples/: e2e_fixture.yaml  scripted_agent.py
examples/quickstart/: README.md  agent.py
examples/quickstart/fixtures/: hello.yaml
examples/quickstart/tests/: test_hello.yaml
src/mcptest/: __init__.py  config.py  plugins.py  pytest_plugin.py  scorecard.py
src/mcptest/agents/: __init__.py  scripted.py
src/mcptest/assertions/: __init__.py  base.py  combinators.py  impls.py
src/mcptest/bench/: __init__.py  profile.py  renderer.py  report.py  runner.py
src/mcptest/capture/: __init__.py  discovery.py  fixture_gen.py  runner.py  sampler.py
src/mcptest/cli/: __init__.py  commands.py  github.py  main.py  scaffold.py
src/mcptest/cloud/: __init__.py  app.py  auth.py  config.py  db.py  middleware.py  models.py  schemas.py
src/mcptest/cloud/dashboard/: __init__.py  routes.py
src/mcptest/cloud/dashboard/templates/: 404.html  base.html  baselines.html  index.html  run_detail.html  runs.html  trends.html  webhooks.html
src/mcptest/cloud/dashboard/templates/partials/: runs_table.html
src/mcptest/cloud/routers/: __init__.py  baselines.py  compare.py  health.py  metrics.py  runs.py
src/mcptest/cloud/webhooks/: __init__.py  delivery.py  events.py  models.py  router.py
src/mcptest/compare/: __init__.py  engine.py
src/mcptest/conformance/: __init__.py  check.py  checks.py  report.py  runner.py  server.py
src/mcptest/coverage/: __init__.py  engine.py
src/mcptest/diff/: __init__.py  baseline.py  engine.py
src/mcptest/docs/: __init__.py  extractors.py  generators.py  site.py  terminal.py
src/mcptest/eval/: __init__.py  grader.py  report.py  rubric.py  similarity.py
src/mcptest/exporters/: __init__.py  base.py  html.py  junit.py  tap.py
src/mcptest/fixtures/: __init__.py  loader.py  models.py
src/mcptest/generate/: __init__.py  engine.py  values.py
src/mcptest/mcp_server/: __init__.py  __main__.py  server.py
src/mcptest/metrics/: __init__.py  base.py  impls.py
src/mcptest/mock_server/: __init__.py  __main__.py  matcher.py  recorder.py  server.py
src/mcptest/registry/: __init__.py  packs.py
src/mcptest/runner/: __init__.py  adapters.py  parallel.py  runner.py  trace.py
src/mcptest/testspec/: __init__.py  loader.py  models.py
src/mcptest/watch/: __init__.py  engine.py
tests/: conftest.py  test_adapters.py  test_assertions.py  test_bench.py  test_capture.py  test_cli.py  test_cli_snapshot_diff.py  test_cloud.py  test_cloud_auth.py  test_cloud_baselines.py  test_cloud_dashboard.py  test_cloud_metrics_history.py  test_cloud_webhooks.py  test_compare.py  test_config.py  test_conformance.py  test_coverage.py  test_diff.py  test_docs.py  test_e2e.py  test_eval.py  test_exporters.py  test_exporters_html.py  test_fixtures_loader.py  test_fixtures_models.py  test_generate.py  test_github.py  test_mcp_server.py  test_metrics.py  test_mock_server.py  test_mock_server_matcher.py  test_parallel.py  test_pytest_plugin.py  test_recorder.py  test_registry.py  test_retry.py  test_runner.py  test_scorecard.py  test_sse.py  test_testspec.py  (+2 more)
tests/fixtures/: example_github.yaml
