[project]
name = "mcp-agent-test"
version = "0.1.0"
description = "pytest for MCP agents — a testing framework for Model Context Protocol agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Joseph Thomas", email = "josephgec@gmail.com" }]
keywords = ["mcp", "testing", "agents", "llm", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "anyio>=4.0",
    "watchfiles>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",  # for fastapi TestClient in the cloud tests
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",  # for dashboard template tests
]
cloud = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
mcptest = "mcptest.cli:main"

[project.entry-points."pytest11"]
mcptest = "mcptest.pytest_plugin"

# Third-party packages can extend mcptest's registries by declaring entry
# points under the groups below.  Each value must be a dotted import path
# to a module that calls the appropriate registration decorator when imported.
#
#   [project.entry-points."mcptest.assertions"]
#   my_assertion = "my_package.assertions"
#
#   [project.entry-points."mcptest.metrics"]
#   my_metric = "my_package.metrics"
#
#   [project.entry-points."mcptest.exporters"]
#   my_exporter = "my_package.exporters"

[project.urls]
Homepage = "https://github.com/josephgec/mcptest"
Repository = "https://github.com/josephgec/mcptest"
Issues = "https://github.com/josephgec/mcptest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcptest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=mcptest --cov-report=term-missing --cov-report=html --cov-branch"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    # Unraisable exceptions from cross-test event-loop teardown noise — the
    # asyncio cleanup is not deterministic across test files and triggers
    # ResourceWarnings we can't tie back to a specific test. Not indicative
    # of real test failures.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/mcptest"]
branch = true
omit = [
    # These two files are loaded by pytest's pytest11 entry point BEFORE
    # pytest-cov starts instrumenting, which makes coverage.py skip their
    # statements entirely (see the "module-not-measured" warning). Their
    # behavior is covered end-to-end by tests/test_pytest_plugin.py via a
    # nested pytester session.
    "src/mcptest/pytest_plugin.py",
    "src/mcptest/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    # Lazy re-export machinery in mcptest/__init__.py — runs before
    # pytest-cov starts instrumenting, same reason as the pytest_plugin.py
    # omit above.
    "_LAZY_REEXPORTS = ",
    "def __getattr__\\(",
]
